--- a/job_hunter/src/main/resources/application.properties
+++ b/job_hunter/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 
 # MySQL Datasource properties
 spring.datasource.url = jdbc:mysql://localhost:3306/job_hunter_db
-spring.datasource.username = root
+spring.datasource.username = job_hunter
 spring.datasource.password = root
 # ----------------------
 # JPA/Hibernate Properties
