job rest-api done

--- a/job_hunter/src/main/resources/application.properties
+++ b/job_hunter/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8080
 
 # MySQL Datasource properties
 spring.datasource.url = jdbc:mysql://localhost:3306/job_hunter_db
-spring.datasource.username = job_hunter
-spring.datasource.password = root
+spring.datasource.username = cs425-october-2022
+spring.datasource.password = robeilaregawi
 # ----------------------
 # JPA/Hibernate Properties
 spring.jpa.show-sql = true
